Address PR review comments on bulk endpoints
- Replace fully qualified Collections.emptyList() with List.of() in EntityDAO
- Convert try/except blocks to pytest.raises in test_delete_stale.py
- Remove stale default: null on seenFqns and fix scopeEntityType example
- Optimize isCoveredByDeletedAncestor from O(deletedHashes) to O(depth) per check
- Update Javadoc and OpenAPI summary/description on deleteStale endpoints to
  reflect that hardDelete is supported (not just soft delete)
- Document overrideMetadata query param via @Parameter on all bulk endpoints
  so it shows in the generated OpenAPI spec

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>